fix: adjust h1 font size for better readability

--- a/Python100daycourse/Web Development Container/6.4 Motivation Meme Project/style.css
+++ b/Python100daycourse/Web Development Container/6.4 Motivation Meme Project/style.css
@@ -13,7 +13,7 @@ body {
 
 h1 {
    text-transform: uppercase;
-   font-size: 3rem;
+   font-size: 2rem;
 }
 
 .motivation-img {
